Ingress/my-deployment/service-1.yml
apiVersion: v1
kind: Service
metadata:
  name: echoserver-svc-1
  namespace: nginx-ingress
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: echoserver-1
---

apiVersion: v1
kind: Service
metadata:
  name: echoserver-svc-2
  namespace: nginx-ingress
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: echoserver-2
