Ingress/my-deployment/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
      { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/certificate-arn: <cert_arn1>,<cert_arn2>
    alb.ingress.kubernetes.io/healthcheck-path: /ping
    alb.ingress.kubernetes.io/healthcheck-port: “<traefik_health_check_port>”
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/security-groups: <sg_group_id_where_alb_will_reside>
    kubernetes.io/ingress.class: alb
    external-dns.alpha.kubernetes.io/hostname: “domain1.net,domain2.com”
  labels:
    app: traefik
spec:
  rules:
    - http:
        paths:
          # HTTP to HTTPS redirect entry
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: "/*"
            backend:
              serviceName: traefik
              servicePort: 443
